apply plugin: 'com.android.library'

android {
    compileSdkVersion 28


    defaultConfig {
        minSdkVersion 19
        targetSdkVersion 28
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles 'consumer-rules.pro'
        dataBinding.enabled true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation 'androidx.appcompat:appcompat:1.1.0'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
    // android官方ui扩展包
//    api "com.android.support:appcompat-v7:28.0.1"
//    api "com.android.support:design:28.0.1"
//    api 'com.google.code.gson:gson:2.8.6'
    api 'androidx.recyclerview:recyclerview:1.1.0'
    api 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-beta01'
    api 'com.alibaba:fastjson:1.2.62'
    // 异步响应式框架
    api 'io.reactivex.rxjava2:rxjava:2.2.8'
    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
    // 网络请求框架
    api 'com.squareup.okhttp3:okhttp:4.2.1'
    api 'com.squareup.okhttp3:logging-interceptor:4.2.1'
    api 'com.squareup.retrofit2:retrofit:2.5.0'
    api 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
    api 'com.squareup.retrofit2:converter-gson:2.5.0'
    // 事件总线
    api 'lib.gorden.rxbus2:rxbus:2.0.1'
    // 图片加载框架
    api 'com.github.bumptech.glide:glide:4.7.1'
    // 黄油刀
//    api 'com.jakewharton:butterknife:10.2.0'
    // recyclerView适配器框架
    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
    // md风格对话框
    api 'com.afollestad.material-dialogs:core:0.9.6.0'
    // 动态权限
    api 'com.github.tbruyelle:rxpermissions:0.10.2'
    // aop 框架
    api 'org.aspectj:aspectjrt:1.9.1'
    // app更新模块
//    api 'com.qianwen:update-app:3.5.2'
}
